# auraflow

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
src/: lib.rs  main.rs  utils.rs
src/app/: components.rs  mod.rs  routes.rs
src/services/: api.rs
style/: input.css
